# answer

./: .gitignore  0hhmlyic.zkw.txt  CMakeLists.txt  LICENSE  README.md
AnswerWS/: CMakeLists.txt
AnswerWS/.kdev4/: AnswerWS.kdev4  libanubis-webservice.kdev4
AnswerWS/.svn/: wc.db
AnswerWS/CMakeModules/: CPP_WSDL.cmake  DoxygenDoc.cmake
AnswerWS/adapters/ApacheModule/: CMakeLists.txt~
AnswerWS/adapters/ApacheModule/src/: ApacheModule.cpp
AnswerWS/adapters/Axis2c/: CMakeLists.txt
AnswerWS/adapters/Axis2c/include/: AxisCookieWrapper.hh  AxisEnvironmentWrapper.hh  AxisInFlowContext.hh  AxisOperation.hh  AxisOutFlowContext.hh  AxisProviderStore.hh
AnswerWS/adapters/Axis2c/src/: AxisAdapter.cpp  AxisCookieWrapper.cpp  AxisEnvironmentWrapper.cpp  AxisModule.cpp  XmlParams.cpp
AnswerWS/adapters/FCGI/: CMakeLists.txt
AnswerWS/adapters/FCGI/src/: FCGIAdapter.cpp
AnswerWS/examples/: CMakeLists.txt
AnswerWS/examples/include/: Calculator.hh
AnswerWS/examples/src/: BasicService.cpp  Calculator.cpp
AnswerWS/include/answer/: Operation.hh  Params.hh
AnswerWS/include/answer/modules/Audit/include/anubis/webservice/webmodule/: Audit.hh
AnswerWS/include/answer/modules/Audit/src/: Audit.cpp
AnswerWS/include/answer/modules/Authentication/: CMakeLists.txt  CMakeModules
AnswerWS/include/answer/modules/Authentication/include/anubis/webservice/webmodule/: Authentication.hh
AnswerWS/include/answer/modules/Authentication/src/: Authentication.cpp
AnswerWS/include/answer/modules/Authorization/include/anubis/webservice/webmodule/: Authorization.hh
AnswerWS/include/answer/modules/Authorization/src/: Authorization.cpp
AnswerWS/include/answer/modules/Initialization/: CMakeModules
AnswerWS/include/answer/modules/Initialization/include/anubis/webservice/webmodule/: Initialization.hh
AnswerWS/include/answer/modules/Initialization/src/: Initialization.cpp
AnswerWS/include/answer/serialization/: ws_xml_oarchive.hpp
AnswerWS/src/: Context.cpp  Cookie.cpp  OperationStore.cpp  Serialization.cpp  XmlParams.cpp
CMakeModules/: CMakeVersion.cmake  CPPCheck.cmake  CPP_WSDL.cmake
Distro Packages/Archlinux/: PKGBUILD
adapters/ApacheModule/: CMakeLists.txt
adapters/ApacheModule/include/: ApacheContext.hh  ApacheModule.hh  ApacheOperationInfo.hh
adapters/ApacheModule/src/: ApacheContext.cpp  ApacheModule.cpp  ApacheOperationInfo.cpp
adapters/Axis2c/: CMakeLists.txt
adapters/Axis2c/deploy/: module.xml
adapters/Axis2c/include/: AxisContext.hh  AxisCookieWrapper.hh  AxisEnvironmentWrapper.hh  AxisInFlowContext.hh  AxisOperation.hh  AxisOutFlowContext.hh  AxisProviderStore.hh  AxisTransportInfo.hh  XmlParams.hh
adapters/Axis2c/src/: AxisAdapter.cpp  AxisContext.cpp  AxisCookieWrapper.cpp  AxisEnvironmentWrapper.cpp  AxisModule.cpp  AxisProviderStore.cpp  AxisTransportInfo.cpp
adapters/CppNetlib/: CMakeLists.txt  CppNetlib.cpp
adapters/FCGI/: CMakeLists.txt
adapters/FCGI/include/: FCGIContext.hh  FCGIOperationInfo.hh
adapters/FCGI/src/: FCGIAdapter.cpp  FCGIContext.cpp  FCGIOperationInfo.cpp
adapters/Mongoose/: CMakeLists.txt
adapters/Mongoose/include/: MongooseContext.h
adapters/Mongoose/src/: MongooseAdapter.cpp  MongooseContext.cpp
adapters/Mongoose/tests/: CMakeLists.txt
adapters/Mongoose/tests/mongoose/: CMakeLists.txt  mongoose.sh
cmake/: AnswerConfig.cmake
cmake/modules/: AnubisDebug.cmake  CPP_WSDL.cmake  DependencyCheck.cmake  FindFastCGI++.cmake  FindMongoose.cmake
config/: answer-apache.conf
examples/: CMakeLists.txt
examples/include/: BasicService.hh  Calculator.hh  Instantiation.hh
examples/src/: BasicService.cpp  Calculator.cpp  Instantiation.cpp  LogModule.cpp
include/answer/: Adapter.hh  ClassTemplateHelpers.hh  Codec.hh  Context.hh  Cookie.hh  Environment.hh  Exception.hh  Instantiation.hh  InstantiationStrategy.hh  Macros.hh  Module.hh  Operation.hh  OperationStore.hh  Utils.hh  WebModule.hh
include/answer/archive/: ws_json_oarchive.hpp  ws_xml_iarchive.hpp  ws_xml_oarchive.hpp
include/answer/archive/impl/: basic_ws_xml_grammar.hpp  basic_ws_xml_grammar.ipp
include/answer/serialization/: ws_xml_iarchive.hpp
src/: Adapter.cpp  Codec.cpp  Context.cpp  Cookie.cpp  Environment.cpp  Exception.cpp  Module.cpp  Operation.cpp  OperationStore.cpp  Params.cpp  Utils.cpp  WebModule.cpp  ws_xml_grammar.cpp
src/archive/: ws_xml_iarchive.cpp  ws_xml_oarchive.cpp
tests/: CMakeLists.txt
tests/codec/: CMakeLists.txt  CodecTest.cpp
tests/instantiation/: CMakeLists.txt  InstantiationTest.cpp
tests/module/: CMakeLists.txt  ModuleTest.cpp
tests/registration/: CMakeLists.txt  RegistrationTest.cpp
tests/serialization/: CMakeLists.txt  SerializationTest.cpp
tests/service/: CMakeLists.txt  ServiceTest.cpp
tools/doxygen_cpp_wsdl/: Doxyfile  Doxyfile_alt  cpp_dataTypes.xml  documentation.xslt  json_payloads.xslt  minimalDoxyfile  serviceDescriptor.xslt  services.xml.xslt  services_js.xslt  textInput.html  wsdl.xslt
